# healthmanagementapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  docker-entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
apps/patients/: admin.py  models.py  schemas.py  serializers.py  urls.py  utils.py  views.py
apps/patients/migrations/: 0001_initial.py
apps/patients/tests/: definitions.py  test_models.py  test_serializers.py  test_views.py
apps/portal/: views.py
apps/portal/templates/portal/: index.html
settings/: asgi.py  settings.py  urls.py  wsgi.py
settings/configs/: __init__.py  base.py  dev.py  prod.py
