[tool.poetry]
name = "health-management"
version = "0.1.0"
description = ""
authors = ["Denis Vieira <deniswvieira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
fhir-resources = "^8.0.0"
drf-yasg = "^1.21.8"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
psycopg-binary = "^3.2.4"
psycopg-pool = "^3.2.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.0"
autoflake = "^2.3.1"
pytest = "^8.3.4"
pytest-django = "^4.10.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 88

[tool.flake8]
exclude = [".venv", "migrations", "__pycache__"]
max-line-length = 88
extend-ignore = ["F401", "F403", "F405"]

[tool.isort]
profile = "black"

[tool.autoflake]
remove-all-unused-imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.configs"
python_files = ["test_*.py", "*_test.py", "tests.py"]
